--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "sqlite3": "^5.1.4"
   },
   "scripts": {
-    "first_run": "node db_init.js && npm run start",
-    "start": "node index.js"
+    "first_run": "node init.js && npm run start",
+    "start": "node index.js",
+    "dev": "node index.js"
   }
 }
